--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vardot/varbase",
+    "name": "vardot/varbase-build",
     "description": "Drupal Bundled with Necessities | by Vardot",
     "type": "drupal-profile",
     "license": "GPL-2.0+",
