Added drupal/varbase to require

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "drupal/core": "~8.0",
         "drush/drush": "~8.0",
         "drupal/console": "~1.0",
-        "drupal/varbase": "^8.x-dev"
+        "drupal/varbase": "^8.*"
     },
     "require-dev": {
        "behat/mink": "~1.7",
