#3 Updated the varbase build --stability to beta and 8.4.0-beta2

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/varbase-build",
+    "name": "Vardot/varbase-build",
     "description": "Drupal Bundled with Necessities | by Vardot projects with composer",
     "type": "project",
     "license": "GPL-2.0+",
