--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,24 @@
         "drupal/varbase": "8.4.*@beta"
     },
     "require-dev": {
-       "behat/mink": "~1.7",
+        "drush/drush": "^9.0",
+        "drupal/drupal-extension": "^3.2",
+        "jakoch/phantomjs-installer": "1.9.8",
+        "behat/behat": "^3.0",
+        "drupal/coder": "8.*",
+        "phing/phing": "^2.14",
+        "behat/mink": "~1.7",
         "behat/mink-goutte-driver": "~1.2",
-        "jcalderonzumba/gastonjs": "~1.0.2",
-        "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsStream": "~1.2",
         "phpunit/phpunit": "~4.8",
-        "symfony/css-selector": "~2.8"
+        "guzzlehttp/guzzle": "^6.1",
+        "symfony/css-selector": "~2.8",
+        "squizlabs/php_codesniffer": "2.*",
+        "behatch/contexts": "*",
+        "emuse/behat-html-formatter": "@stable"
+    },
+    "config": {
+        "bin-dir": "bin/"
     },
     "conflict": {
         "drupal/drupal": "*"
