--- a/composer.json
+++ b/composer.json
@@ -1,71 +1,72 @@
 {
-    "name": "vardot/varbase-build",
-    "description": "Drupal Bundled with Necessities | by Vardot projects with composer",
-    "type": "project",
-    "license": "GPL-2.0+",
-    "authors": [
-      {
-        "name": "Vardot",
-        "role": "Development"
-      }
-    ],
-    "repositories": [
-      {
-        "type": "composer",
-        "url": "https://packagist.drupal-composer.org"
-      }
-    ],
-    "require-dev": {
-      "drush/drush": "^9.0",
-      "drupal/drupal-extension": "^3.2",
-      "jakoch/phantomjs-installer": "1.9.8",
-      "behat/behat": "^3.0",
-      "drupal/coder": "8.*",
-      "phing/phing": "^2.14",
-      "behat/mink": "~1.7",
-      "behat/mink-goutte-driver": "~1.2",
-      "mikey179/vfsStream": "~1.2",
-      "phpunit/phpunit": "~4.8",
-      "guzzlehttp/guzzle": "^6.1",
-      "symfony/css-selector": "~2.8",
-      "squizlabs/php_codesniffer": "2.*",
-      "behatch/contexts": "*",
-      "emuse/behat-html-formatter": "@stable"
-    },
-    "require": {
-        "composer/installers": "^1.0",
-        "drupal-composer/drupal-scaffold": "^2.0.0",
-        "cweagans/composer-patches": "1.5.0",
-        "drupal/varbase": "8.4.*@dev"
-    },
-    "config": {
-        "bin-dir": "bin/"
-    },
-    "conflict": {
-        "drupal/drupal": "*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "autoload": {
-      "classmap": [
-        "scripts/composer/ScriptHandler.php"
-      ]
-    },
-    "scripts": {
-      "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-      "pre-install-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
-      "pre-update-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
-      "post-install-cmd": ["DrupalProject\\composer\\ScriptHandler::createRequiredFiles"],
-      "post-update-cmd": ["DrupalProject\\composer\\ScriptHandler::createRequiredFiles"]
-    },
-    "extra": {
-      "installer-paths": {
-        "docroot/core": ["drupal/core"],
-        "docroot/modules/contrib/{$name}": ["type:drupal-module"],
-        "docroot/profiles/{$name}": ["type:drupal-profile"],
-        "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
-        "drush/contrib/{$name}": ["type:drupal-drush"]
-      },
-      "enable-patching": true
+  "name": "vardot/varbase-build",
+  "description": "Drupal Bundled with Necessities | by Vardot projects with composer",
+  "type": "project",
+  "license": "GPL-2.0+",
+  "authors": [
+    {
+      "name": "Vardot",
+      "role": "Development"
     }
+  ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packagist.drupal-composer.org"
+    }
+  ],
+  "require-dev": {
+    "drush/drush": "^9.0",
+    "drupal/drupal-extension": "^3.2",
+    "jakoch/phantomjs-installer": "1.9.8",
+    "behat/behat": "^3.0",
+    "drupal/coder": "8.*",
+    "phing/phing": "^2.14",
+    "behat/mink": "~1.7",
+    "behat/mink-goutte-driver": "~1.2",
+    "mikey179/vfsStream": "~1.2",
+    "phpunit/phpunit": "~4.8",
+    "guzzlehttp/guzzle": "^6.1",
+    "symfony/css-selector": "~2.8",
+    "squizlabs/php_codesniffer": "2.*",
+    "behatch/contexts": "*",
+    "emuse/behat-html-formatter": "@stable"
+  },
+  "require": {
+    "composer/installers": "^1.0",
+    "drupal-composer/drupal-scaffold": "^2.0.0",
+    "cweagans/composer-patches": "1.5.0",
+    "drupal/varbase": "8.4.*@beta",
+    "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
+  },
+  "config": {
+      "bin-dir": "bin/"
+  },
+  "conflict": {
+      "drupal/drupal": "*"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "autoload": {
+    "classmap": [
+      "scripts/composer/ScriptHandler.php"
+    ]
+  },
+  "scripts": {
+    "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+    "pre-install-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
+    "pre-update-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
+    "post-install-cmd": ["DrupalProject\\composer\\ScriptHandler::createRequiredFiles"],
+    "post-update-cmd": ["DrupalProject\\composer\\ScriptHandler::createRequiredFiles"]
+  },
+  "extra": {
+    "installer-paths": {
+      "docroot/core": ["drupal/core"],
+      "docroot/modules/contrib/{$name}": ["type:drupal-module"],
+      "docroot/profiles/{$name}": ["type:drupal-profile"],
+      "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
+      "drush/contrib/{$name}": ["type:drupal-drush"]
+    },
+    "enable-patching": true
+  }
 }
