--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,18 @@
   "require-dev": {
     "drush/drush": "^9.0",
     "drupal/drupal-extension": "^3.2",
+    "drupal-composer/drupal-scaffold": "^2.0.0",
     "jakoch/phantomjs-installer": "1.9.8",
     "behat/behat": "^3.0",
     "drupal/coder": "8.*",
     "phing/phing": "^2.14",
     "behat/mink": "~1.7",
     "behat/mink-goutte-driver": "~1.2",
+    "behat/mink-zombie-driver": "@stable",
+    "behat/mink-selenium2-driver":  "~1.3",
     "mikey179/vfsStream": "~1.2",
     "phpunit/phpunit": "~4.8",
-    "guzzlehttp/guzzle": "^6.1",
+    "guzzlehttp/guzzle": "6.2.*@stable",
     "symfony/css-selector": "~2.8",
     "squizlabs/php_codesniffer": "2.*",
     "behatch/contexts": "*",
@@ -36,14 +39,11 @@
     "composer/installers": "^1.0",
     "drupal-composer/drupal-scaffold": "^2.0.0",
     "cweagans/composer-patches": "1.5.0",
-    "drupal/varbase": "8.4.*@beta",
+    "drupal/varbase": "8.4.0-beta7",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
   },
   "config": {
       "bin-dir": "bin/"
-  },
-  "conflict": {
-      "drupal/drupal": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
