--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     }
   ],
   "repositories": [
-    {
-      "type": "composer",
-      "url": "https://packagist.drupal-composer.org"
-    }
+      {
+          "type": "composer",
+          "url": "https://packages.drupal.org/8"
+      }
   ],
   "require-dev": {
     "drush/drush": "^9.0",
@@ -36,9 +36,12 @@
     "emuse/behat-html-formatter": "@stable"
   },
   "require": {
-    "composer/installers": "^1.0",
-    "drupal-composer/drupal-scaffold": "^2.0.0",
-    "cweagans/composer-patches": "1.5.0",
+    "composer/installers": "^1.0.20",
+    "drupal-composer/drupal-scaffold": "^2.0.1",
+    "cweagans/composer-patches": "^1.5.0",
+    "drupal/core": "~8.0",
+    "drush/drush": "~8.0",
+    "drupal/console": "~1.0",
     "drupal/varbase": "8.4.0-beta8",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
   },
