--- a/composer.json
+++ b/composer.json
@@ -39,25 +39,22 @@
     "composer/installers": "^1.0.20",
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "cweagans/composer-patches": "^1.5.0",
-    "drupal/core": "~8.0",
+    "drupal/core": "8.2.1",
     "drush/drush": "~8.0",
     "drupal/console": "~1.0",
-    "drupal/varbase": "8.4.0-beta8",
+    "drupal/varbase": "4.0-beta8",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
   },
   "config": {
       "bin-dir": "bin/"
   },
-    "conflict": {
-        "drupal/drupal": "*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "autoload": {
-        "classmap": [
-            "scripts/composer/ScriptHandler.php"
-        ]
-    },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "autoload": {
+      "classmap": [
+          "scripts/composer/ScriptHandler.php"
+      ]
+  },
   "scripts": {
     "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
     "pre-install-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
