--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "cweagans/composer-patches": "^1.5.0",
     "drupal/core": "8.2.1",
-    "drush/drush": "~8.0",
+    "drush/drush": "^9.0",
     "drupal/console": "~1.0",
     "drupal/varbase": "4.0-beta9",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
