Changed the composer.json, and have a better git ignore list of files. and have the varbase Post install proceduare and Post Update proceduare

--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,10 @@
     "pre-install-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
     "pre-update-cmd": ["DrupalProject\\composer\\ScriptHandler::checkComposerVersion"],
     "post-install-cmd": ["DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-      "Vardot\\Varbase\\Procedures::procedure"
+      "Vardot\\Varbase\\Procedures::postInstallProcedure"
     ],
     "post-update-cmd": ["DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-      "Vardot\\Varbase\\Procedures::procedure"
+      "Vardot\\Varbase\\Procedures::postUpdateProcedure"
     ]
   },
   "prefer-stable": true,
