Have the Varbase 8.4.0-beta9-no-core test

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "drush/drush": "^9.0",
     "drupal/console": "~1.0",
     "drupal/core": "8.2.2",
-    "drupal/varbase": "4.0-beta9",
+    "drupal/varbase": "4.0-beta9-no-core",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
   },
   "config": {
