--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "cweagans/composer-patches": "1.5.0",
     "drush/drush": "^9.0",
     "drupal/console": "~1.0",
+    "drupal/core": "8.2.1",
     "drupal/varbase": "4.0-beta9",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
   },
@@ -85,6 +86,7 @@
   },
   "extra": {
     "installer-paths": {
+      "docroot/core": ["type:drupal-core"],
       "docroot": ["type:drupal-profile"],
       "docroot/sites/default/libraries/{$name}": ["type:drupal-library"],
       "docroot/sites/default/modules/contrib/{$name}": ["type:drupal-module"],
