--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
     "cweagans/composer-patches": "1.5.0",
     "drush/drush": "^9.0",
     "drupal/console": "~1.0",
-    "drupal/core": "8.2.1",
-    "drupal/varbase": "4.0-beta9",
+    "drupal/core": "8.2.2",
+    "drupal/varbase": "4.0-beta10",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8"
   },
   "config": {
@@ -88,9 +88,9 @@
     "installer-paths": {
       "docroot/core": ["type:drupal-core"],
       "docroot": ["type:drupal-profile"],
-      "docroot/sites/default/libraries/{$name}": ["type:drupal-library"],
-      "docroot/sites/default/modules/contrib/{$name}": ["type:drupal-module"],
-      "docroot/sites/default/themes/contrib/{$name}": ["type:drupal-theme"],
+      "docroot/libraries/{$name}": ["type:drupal-library"],
+      "docroot/modules/contrib/{$name}": ["type:drupal-module"],
+      "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
       "drush/contrib/{$name}": ["type:drupal-drush"]
     },
     "enable-patching": true
