--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     }
   ],
   "repositories": [
-      {
-          "type": "composer",
-          "url": "https://packages.drupal.org/8"
-      }
+    {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
+    }
   ],
   "require-dev": {
     "drupal/drupal-extension": "^3.2",
@@ -35,9 +35,12 @@
     "emuse/behat-html-formatter": "@stable"
   },
   "require": {
-    "composer/installers": "^1.0",
+    "composer/installers": "^1.2.0",
+    "cweagans/composer-patches": "^1.5.0",
     "drupal-composer/drupal-scaffold": "^2.0.0",
-    "cweagans/composer-patches": "1.5.0",
+    "drupal/drupal-library-installer-plugin": "~0.3",
+    "mkalkbrenner/php-htmldiff-advanced": "~0.0.8",
+    "enyo/dropzone": "4.3.0",
     "drush/drush": "^9.0",
     "drupal/console": "~1.0",
     "drupal/core": "8.2.4",
@@ -87,12 +90,21 @@
   "extra": {
     "installer-paths": {
       "docroot/core": ["type:drupal-core"],
-      "docroot": ["type:drupal-profile"],
+      "docroot/profiles/{$name}": ["type:drupal-profile"],
       "docroot/libraries/{$name}": ["type:drupal-library"],
       "docroot/modules/contrib/{$name}": ["type:drupal-module"],
       "docroot/themes/contrib/{$name}": ["type:drupal-theme"],
       "drush/contrib/{$name}": ["type:drupal-drush"]
     },
     "enable-patching": true
+  },
+  "drupal-libraries": {
+    "library-directory": "docroot/libraries",
+    "libraries": [
+      {
+        "name": "dropzone",
+        "package": "enyo/dropzone"
+      }
+    ]
   }
 }
