#7 : [Varbase Build] Added a new composer run-script command [composer create-new-vartheme VARTHEME_SUBTHEME_NAME]

--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
       "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
       "Vardot\\Varbase\\Procedures::postUpdateProcedure"
     ],
+    "create-new-vartheme": "scripts/varbase/cmd/create-new-vartheme.sh",
     "varbase-check-tests": "scripts/varbase/cmd/varbase-check-tests.sh",
     "varbase-init-tests": "scripts/varbase/cmd/varbase-init-tests.sh",
     "varbase-apply-tests": "scripts/varbase/cmd/varbase-apply-tests.sh",
