--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,8 @@
     "cweagans/composer-patches": "^1.5.0",
     "drupal-composer/drupal-scaffold": "^2.0.0",
     "drupal/drupal-library-installer-plugin": "~0.3",
+    "mkalkbrenner/php-htmldiff-advanced": "~0.0.8",
+    "enyo/dropzone": "4.3.0",
     "vardot/varbase": "4.0.0-beta15"
   },
   "config": {
