--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,10 @@
     "emuse/behat-html-formatter": "@stable"
   },
   "require": {
+    "php": ">=5.6",
     "composer/installers": "^1.2.0",
-    "cweagans/composer-patches": "^1.5.0",
-    "drupal-composer/drupal-scaffold": "^2.0.0",
-    "drupal/drupal-library-installer-plugin": "~0.3",
+    "cweagans/composer-patches": "^1.6.0",
+    "drupal-composer/drupal-scaffold": "^2.2.0",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8",
     "enyo/dropzone": "4.3.0",
     "vardot/varbase": "4.0.0-beta15"
@@ -94,14 +94,5 @@
       "drush/contrib/{$name}": ["type:drupal-drush"]
     },
     "enable-patching": true
-  },
-  "drupal-libraries": {
-    "library-directory": "docroot/libraries",
-    "libraries": [
-      {
-        "name": "dropzone",
-        "package": "enyo/dropzone"
-      }
-    ]
   }
 }
