--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "composer/installers": "^1.2.0",
     "cweagans/composer-patches": "^1.6.0",
     "drupal-composer/drupal-scaffold": "^2.2.0",
+    "drupal/drupal-library-installer-plugin": "~0.3",
     "mkalkbrenner/php-htmldiff-advanced": "~0.0.8",
     "enyo/dropzone": "4.3.0",
     "vardot/varbase": "4.0.0-beta15"
@@ -85,6 +86,15 @@
     "varbase-full-production-tests": "scripts/varbase/cmd/varbase-full-production-tests.sh"
   },
   "extra": {
+    "drupal-libraries": {
+      "library-directory": "docroot/libraries",
+      "libraries": [
+        {
+          "name": "dropzone",
+          "package": "enyo/dropzone"
+        }
+      ]
+    },
     "installer-paths": {
       "docroot/core": ["type:drupal-core"],
       "docroot/profiles/{$name}": ["type:drupal-profile"],
