Add alternative robots.txt file for non-production url with a optimized post Drupal Scaffold Procedure #18

--- a/composer.json
+++ b/composer.json
@@ -97,6 +97,9 @@
   },
   "scripts": {
     "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+    "post-drupal-scaffold-cmd": [
+      "Vardot\\Varbase\\Procedures::postDrupalScaffoldProcedure"
+    ],
     "pre-install-cmd": [
       "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
     ],
