--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
     "enyo/dropzone": "4.3.0",
     "dinbror/blazy": "1.8.2",
     "kenwheeler/slick": "1.6.0",
-    "vardot/varbase": "8.4.01"
+    "vardot/varbase": "8.4.x-dev"
   },
   "config": {
       "bin-dir": "bin/"
