--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,31 @@
           "reference": "origin/master"
         }
       }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "ckeditor/bidi",
+        "version": "4.6.2",
+        "type": "drupal-library",
+        "dist": {
+          "url": "http://download.ckeditor.com/bidi/releases/bidi_4.6.2.zip",
+          "type": "zip"
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "ajaxorg/ace-builds",
+        "version": "1.2.6",
+        "type": "library",
+        "source": {
+          "url": "https://github.com/ajaxorg/ace-builds",
+          "type": "git",
+          "reference": "origin/master"
+        }
+      }
     }
   ],
   "require-dev": {
@@ -79,10 +104,13 @@
     "enyo/dropzone": "4.3.0",
     "dinbror/blazy": "1.8.2",
     "kenwheeler/slick": "1.6.0",
+    "ckeditor/bidi": "4.6.2",
+    "ajaxorg/ace-builds": "1.2.6",
     "vardot/varbase": "8.4.x-dev"
   },
   "config": {
-      "bin-dir": "bin/"
+      "bin-dir": "bin/",
+      "secure-http": false
   },
   "conflict": {
       "drupal/drupal": "*"
@@ -144,6 +172,14 @@
         {
           "name": "slick",
           "package": "kenwheeler/slick"
+        },
+        {
+          "name": "bidi",
+          "package": "ckeditor/bidi"
+        },
+        {
+          "name": "ace",
+          "package": "ajaxorg/ace-builds"
         }
       ]
     },
