--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,8 @@
   "license": "GPL-2.0+",
   "authors": [
     {
-      "name": "Mohammed J. Razem",
-      "homepage": "https://github.com/moerazem",
-      "role": "Maintainer"
-    },
-    {
-      "name": "Rajab Natshah",
-      "homepage": "https://github.com/Natshah",
+      "name": "Vardot",
+      "homepage": "https://github.com/vardot",
       "role": "Maintainer"
     }
   ],
@@ -29,6 +24,7 @@
     "php": ">=5.6",
     "composer/installers": "^1.2.0",
     "cweagans/composer-patches": "^1.6.0",
+    "wikimedia/composer-merge-plugin": "~1.4",
     "drupal-composer/drupal-scaffold": "^2.2.0",
     "drupal/drupal-library-installer-plugin": "~0.3",
     "vardot/varbase": "8.4.x-dev"
@@ -42,49 +38,21 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
-    "autoload": {
-      "classmap": [
-        "scripts/composer/ScriptHandler.php",
-        "scripts/varbase/Procedures.php"
-      ]
-  },
-  "scripts": {
-    "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-    "post-drupal-scaffold-cmd": [
-      "Vardot\\Varbase\\Procedures::postDrupalScaffoldProcedure"
-    ],
-    "pre-install-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
-    ],
-    "pre-update-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::checkComposerVersion"
-    ],
-    "post-install-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-    ],
-    "post-update-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-    ],
-    "post-package-install": [
-      "Vardot\\Varbase\\Procedures::postInstallProcedure"
-    ],
-    "post-package-update": [
-      "Vardot\\Varbase\\Procedures::postUpdateProcedure"
-    ],
-    "create-new-vartheme": "scripts/varbase/cmd/create-new-vartheme.sh",
-    "varbase-check-tests": "scripts/varbase/cmd/varbase-check-tests.sh",
-    "varbase-init-tests": "scripts/varbase/cmd/varbase-init-tests.sh",
-    "varbase-apply-tests": "scripts/varbase/cmd/varbase-apply-tests.sh",
-    "varbase-cleanup-tests": "scripts/varbase/cmd/varbase-cleanup-tests.sh",
-    "varbase-full-tests": "scripts/varbase/cmd/varbase-full-tests.sh",
-    "varbase-full-local-tests": "scripts/varbase/cmd/varbase-full-tests.sh",
-    "varbase-full-development-tests": "scripts/varbase/cmd/varbase-full-development-tests.sh",
-    "varbase-full-staging-tests": "scripts/varbase/cmd/varbase-full-staging-tests.sh",
-    "varbase-full-production-tests": "scripts/varbase/cmd/varbase-full-production-tests.sh"
-  },
   "extra": {
     "branch-alias": {
       "dev-8.x-4.x": "8.4.x-dev"
+    },
+    "merge-plugin": {
+      "include": [
+        "docroot/profiles/varbase/composer.json"
+      ],
+      "recurse": true,
+      "replace": false,
+      "ignore-duplicates": false,
+      "merge-dev": true,
+      "merge-extra": true,
+      "merge-extra-deep": false,
+      "merge-scripts": true
     },
     "installer-paths": {
       "docroot/core": ["drupal/core"],
