Issue #2894493: Cleaned up [Varbase Project] composer files for easier updates

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
       "include": [
         "docroot/profiles/varbase/composer.json"
       ],
-      "recurse": true,
+      "recurse": false,
       "replace": false,
       "ignore-duplicates": false,
       "merge-dev": true,
