--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "vardot/varbase-build",
-  "description": "Varbase: The Ultimate Drupal 8 Bootstrap Distribution | by Vardot",
+  "description": "Moved to Varbase Project https://github.com/Vardot/varbase-project",
   "type": "project",
   "license": "GPL-2.0+",
   "authors": [
@@ -27,12 +27,12 @@
     "wikimedia/composer-merge-plugin": "~1.4",
     "drupal-composer/drupal-scaffold": "^2.2.0",
     "drupal/drupal-library-installer-plugin": "~0.3",
-    "vardot/varbase": "8.4.06"
+    "vardot/varbase": "^8.4.06"
   },
   "config": {
     "bin-dir": "bin/",
     "secure-http": false,
-    "preferred-install": "dist",
+    "discard-changes": true,
     "optimize-autoloader": true
   },
   "minimum-stability": "dev",
@@ -45,10 +45,10 @@
       "include": [
         "docroot/profiles/varbase/composer.json"
       ],
-      "recurse": false,
+      "recurse": true,
       "replace": false,
       "merge-dev": true,
-      "merge-extra": true,
+      "merge-extra": false,
       "merge-extra-deep": false,
       "merge-scripts": true
     },
