--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
     "php": ">=5.6",
     "composer/installers": "^1.2.0",
     "cweagans/composer-patches": "^1.6.0",
-    "wikimedia/composer-merge-plugin": "~1.4",
     "drupal-composer/drupal-scaffold": "^2.2.0",
     "drupal/drupal-library-installer-plugin": "~0.3",
     "vardot/varbase": "^8.4.06"
@@ -32,8 +31,20 @@
   "config": {
     "bin-dir": "bin/",
     "secure-http": false,
-    "discard-changes": true,
     "optimize-autoloader": true
+  },
+  "scripts": {
+    "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+    "post-install-cmd": [
+      "Varbase\\composer\\ScriptHandler::createRequiredFiles",
+      "Varbase\\composer\\ScriptHandler::removeGitDirectories",
+      "@composer drupal-scaffold"
+    ],
+    "post-update-cmd": [
+      "Varbase\\composer\\ScriptHandler::createRequiredFiles",
+      "Varbase\\composer\\ScriptHandler::removeGitDirectories"
+    ],
+    "post-drupal-scaffold-cmd": ["Varbase\\composer\\ScriptHandler::postDrupalScaffoldProcedure"]
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -41,16 +52,8 @@
     "drupal/drupal": "*"
   },
   "extra": {
-    "merge-plugin": {
-      "include": [
-        "docroot/profiles/varbase/composer.json"
-      ],
-      "recurse": true,
-      "replace": false,
-      "merge-dev": true,
-      "merge-extra": false,
-      "merge-extra-deep": false,
-      "merge-scripts": true
+    "branch-alias": {
+      "dev-8.x-4.x": "8.4.x-dev"
     },
     "installer-paths": {
       "docroot/core": ["drupal/core"],
